PagamentosFase3/k8s/pagamentos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagamentos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagamentos-api
  template:
    metadata:
      labels:
        app: pagamentos-api
    spec:
      containers:
        - name: pagamentos-api
          image: fase3pagamentosacr.azurecr.io/fase3-pagamentos-img:latest
          ports:
            - containerPort: 8080


          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
