PagamentosFase3/k8s/pagamentos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pagamentos-service
spec:
  selector:
    app: pagamentos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
